Chrome content-visible fix

--- a/iXBRLViewerPlugin/viewer/src/less/inspector.less
+++ b/iXBRLViewerPlugin/viewer/src/less/inspector.less
@@ -88,6 +88,7 @@
         color: #777;
         cursor: pointer;
         user-select: none;
+        z-index: 10;
       }
 
       .zoom-in {
